# mill_controller

./: .gitignore  CMakeLists.txt  Documentation.md  README.md  package.xml  restart_camera.sh  updated_package.xml
Reference Resources/: Camera troubleshooting notes  GUI_node.py  multidimensionalarray.cpp  octomap_example.cpp  rosnode_skeleton.py  stream.py  trajectory_to_gcode_example.py
Reference Resources/Image Alignment/: homography_prototype.py  img_align.py  tags_r.odt
launch/: ar_track.launch  ar_track2.launch  calibration.launch  camera_calibration.launch  experiment.launch  image_calibration.launch  includer.launch  inclusion.launch  launch.launch  libuvc_camera.launch  mill_controller.launch  octomap_mapping.launch  trajectory_experiment.launch  usb_cam.launch  uvc_cam.launch  vis_experiment.launch
msg/: Float32Array.msg  Occupancy.msg  Trajectory.msg  Trajectory2.msg
nodes/: GUI_node.py  black_box  csv_parser  csv_parser.py  gcode_sender  homography_prototype.py  image_calibration  image_calibration.py  image_collector  image_processor  image_saver  rosnode_sleep_test  string_parser  trajectory_parser
rviz/: octomap_vis.rviz
src/: gcode_sender.py  image_collector.py  image_processor.py  image_translator.cpp  image_translator.py  multidimensionalarray.cpp  octomap_example.cpp  octomap_to_array.cpp  output.gcode  rosnode_skeleton.cpp  rosnode_skeleton.py  simple_stream.py  string_parser.py  text_input_parser.py  trajectory_parser.py  trajectory_to_gcode.py
trajectories/: example.csv  fake.csv  z.csv
